Section with user tests omstruktureret anf finished for now

--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -1,4 +1,11 @@
-\section{Brugertests}
+\section{Samarbejde med brugere}
+Igennem hele prjektet har vi haft stort fokus på at lytte til vores brugere og lavde det, som de har brug for. Vi har været i kontakt med to forskellige brugere, dog kun meget lidt med bruger 2. Optimalt ville vi gerne have haft input fra flere brugere. Dette blev ikke en realitet, men ville fremtidigt kunne give en værdi for appen hvis udført.
+
+Allerede inden projektet startede havde vi en samtale med bruger 1 for at afdække behov. Denne samtale lagde udgangspunktet for vores kravspecifikation og problemformulering.
+
+Derudover har vi brugt bruger 1 til at observere hendes arbejdspraksis i forhold til at holde styr på sædskifte. Dette har vi taget meget udgangspunkt i, da vi ikke selv har erfaring med den praktiske del af en køkkenhave, men blot det teoretiske, vi har læst os frem til.
+
+\subsection{Brugertests}
 Vi har igennem udviklingsprocessen af appen udført X brugertests med Y forskellige brugere. Der er blevet udført brugertests efter følgende sprints med følgende brugere:
 \begin{itemize}
     \item Sprint 2 - Bruger 1
@@ -63,10 +70,4 @@ Ligesom i brugertest 2, lavede brugeren en top tre over ønskede features, men p
         \item Vejledning til at skrive sorten i en brugerlavet plante 
 \end{enumerate}
 
-\section{Tæt samarbejde med brugeren}
-Her noget om:
-\begin{itemize}
-    \item Vores kravspecifikation inden projektet
-    \item Info om sædskifte
-\end{itemize} 
 
