--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -78,6 +78,15 @@ Den anden løsning blev fravalgt, da der skulle meget arbejde til at få server 
 Jævnfør problemformuleringen opfyldte vi dette krav. I forhold til vores egne forvetninger, derimod, blev det implemeteret på en helt anden måde. Det datagrundlag, vi fandt, samt det, vi læste om sædskifte (INDSÆT REFERENCE HER) informerede os om vigtighigheden heraf og hvordan det er forskelligt fra plante til plante. Derfor havde vi først troet, at vi skulle visualisere alle planter i alle bed i forhold til sædskifte. Efter en observation af bruger 1's nuværende måde at holde styr på sædskifte samt en forklarende snak med hende, fandt vi dog frem til, at det giver bedre mening at holde styr på sædskifte på bed-niveau. Man vil som oftest så planter af samme familie i samme bed og rotere hele bede for at undgå udpining af jorden. Derfor ændrede vi vores måde at anskue hele featuren til at give et overblik over hvor længe et bed har været på samme plads, hvor det tidligere har været samt hvornår det igen kan plantes på en tidligere position ifølge den type plante i bedet, der har største sædskifteinterval.
 
 \subsubsection{Image analysis}
+Vi havde snakket om, at implementere brug af image analysis til at hjælpe brugeren med at oprette sin have i appen ved blot at tage et billede af den. Dette vurderede vi ikke ville give værdi for brugeren da:
+\begin{enumerate}
+        \item Featuren kan kun bruges første gang man bruger appen
+        \item Det kræver at dine planter er vokset nok til at de kan genkendes af en algoritme
+\end{enumerate}
+
+Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et billede af en frøpose, og vi tænkte i den sammenhæng, at man kunne bruge image analysis til en billede-til-tekst funktion i notesfeltet. Konklusionen hertil blev, at det var overdrevet at integrere image analysis for en sådan lille funktion, og det er derfor blot blevet til at man selv må udfylde notesfeltet. 
+
+Image analysis blev derfor ikke relevant for dette projekt.
 
 \subsubsection{IoT devices}
 Undervejs i projektet undersøgte vi hvilke køkkenhave-relaterede produkter, der enten allerede fandtes som IoT eller kunne give mening at gøre til en IoT.
