--- a/report/brugertests.tex
+++ b/report/brugertests.tex
@@ -3,7 +3,7 @@ Igennem hele prjektet har vi haft stort fokus på at lytte til vores brugere og 
 
 Allerede inden projektet startede havde vi en samtale med bruger 1 for at afdække behov. Denne samtale lagde udgangspunktet for vores kravspecifikation og problemformulering.
 
-Derudover har vi brugt bruger 1 til at observere hendes arbejdspraksis i forhold til at holde styr på sædskifte. Dette har vi taget meget udgangspunkt i, da vi ikke selv har erfaring med den praktiske del af en køkkenhave, men blot det teoretiske, vi har læst os frem til.
+Derudover har vi brugt bruger 1 til at observere hendes arbejdspraksis i forhold til at holde styr på sædskifte og anden organisering i køkkenhaven. Dette har vi taget meget udgangspunkt i, da vi ikke selv har erfaring med den praktiske del af en køkkenhave, men blot det teoretiske, vi har læst os frem til.
 
 \subsection{Brugertests}
 Vi har igennem udviklingsprocessen af appen udført X brugertests med Y forskellige brugere. Der er blevet udført brugertests efter følgende sprints med følgende brugere:
