--- a/report/dokumentation.tex
+++ b/report/dokumentation.tex
@@ -8,7 +8,7 @@ Navigation mellem fragmenter og dialog-bokse foregår med en navigationsgraf i x
 \subsection{Datagrundlag}
 Appen indeholder data om forskellige planter, som er taget fra Årstidernes plantekalender \hyperlink{https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender}{https://issuu.com/aarstiderne\_com/docs/aarstidernes-plante-og-saa-kalender}.
 
-Dataet er lagt ind i en \texttt{.csv}-fil, som læses ind i \texttt{PlantViewModel} via en \texttt{CSVReader}. På den måde er det nemt, hvis man skulle få mere data, eller at dataet ændrer sig. Hvis dataet ændrer sig meget drastisk, skal man kun rette på \texttt{Plant}-klassens felter og eventuelt \texttt{MyPlant}-klassen --- logikken er stadig ens.
+Dataet er lagt ind i en \texttt{.csv}-fil, som læses ind i \texttt{PlantViewModel} via en \texttt{CSVReader}. På den måde er det nemt, hvis man skulle få mere data, eller at dataet ændrer sig. 
 
 \subsection{Datarepræsentation}
 
