--- a/report/refleksion.tex
+++ b/report/refleksion.tex
@@ -80,11 +80,11 @@ Jævnfør problemformuleringen opfyldte vi dette krav. I forhold til vores egne 
 \subsubsection{Image analysis}
 Vi havde snakket om, at implementere brug af image analysis til at hjælpe brugeren med at oprette sin have i appen ved blot at tage et billede af den. Dette vurderede vi ikke ville give værdi for brugeren da:
 \begin{enumerate}
-        \item Featuren kan kun bruges første gang man bruger appen
+        \item Featuren bliver sandsynligvis kun brugt første gang, appen bruges, da man som udgangspunkt ikke ønsker at bygge sin have på ny efterfølgende. 
         \item Det kræver at dine planter er vokset nok til at de kan genkendes af en algoritme
 \end{enumerate}
 
-Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et billede af en frøpose, og vi tænkte i den sammenhæng, at man kunne bruge image analysis til en billede-til-tekst funktion i notesfeltet. Konklusionen hertil blev, at det var overdrevet at integrere image analysis for en sådan lille funktion, og det er derfor blot blevet til at man selv må udfylde notesfeltet. 
+Derefter fik vi idéen fra en bruger, at vi kunne give mulighed for at tage et billede af en frøpose, og vi tænkte i den sammenhæng, at man kunne bruge image analysis til en billede-til-tekst funktion i notesfeltet. Konklusionen hertil blev, at det var for tidskrævende at integrere image analysis for en sådan lille forbedring af brugeroplevelsen, og det er derfor blevet til, at man må udfylde notesfeltet manuelt. 
 
 Image analysis blev derfor ikke relevant for dette projekt.
 
