--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -11,3 +11,4 @@
 \usepackage[citestyle=authoryear,bibstyle=nature]{biblatex}
 \usepackage[colorlinks,pdfencoding=auto]{hyperref}
 \usepackage[danish]{babel}
+\usepackage{wrapfig, lipsum}
