Start of user guide

--- a/report/brugervejledning.tex
+++ b/report/brugervejledning.tex
@@ -28,12 +28,23 @@ Når du har oprettet din have kan du se dem i den oversigt, der før var tom.
 For at få det til at ligne din egen have mest muligt, kan du holde inde på et bed og trække i det for at skifte bedenes rækkefølge. Dette kan også hjælpe appen til at holde styr på sædskifte. Læs mere om dette under sædskifte.
 \end{minipage}
 
+\begin{minipage}{0.4\textwidth}
+\begin{figure}[H]
+    \centering
+    \frame{\includegraphics[width=\textwidth]{img/screenshot-plante-i-bed.jpg}}
+    \caption{Tilpasning af detaljer om en plantet radise}
+\end{figure}
+\end{minipage} \hfill
+\begin{minipage}{0.5\textwidth}
+Hvis du trykker på et bed, har du mulighed for at redigere eller slette bedet øverst til højre. Når du redigerer bedet kan du ændre størrelsen, planterne og afslutningvis kan du ændre navnet, når du trykker på gem. Hvis du trykker på en bestemt plante i bedet, kan du indtaste detaljer, der vedrører denne plante specifikt. Her kan du f.eks. indtaste en bestemt sort, holde styr på hvornår den er blevet vandet og skrive noter. Hvis du vil have mere generel info om planten, kan du trykke på "Til leksikon".
+\end{minipage}
+
 \subsection{Planlæg kommende sæsoner og se historik}
 \begin{minipage}{0.4\textwidth}
 \begin{figure}[H]
     \centering
     \frame{\includegraphics[width=\textwidth]{img/screenshot-sidemenu.jpg}}
-    \caption{Opret et nyt bed eller område}
+    \caption{Side-menuen}
 \end{figure}
 \end{minipage} \hfill
 \begin{minipage}{0.55\textwidth}
@@ -41,6 +52,7 @@ I side-menuen, som kan åbnes øverst til venstre, kan du se en oversigt over al
 \end{minipage} 
 
 \subsection{Se og opret planter}
+Tryk på side-menuen og åbn leksikonnet. Her vil du få en oversigt over alle de planter, som appen per default har. Du kan søge efter en bestemt plante eller blot scrolle gennem listen. Hvis du trykker på en plante, vil du blive ført til en informationsside, hvor du kan se alt det data, som appen kender om den givne plante. Hvis du savner en plante, gerne vil have en seperat plante i appen for en bestemt sort eller lignende, kan du i bunden vælge "Ny plante". Her har du mulighed for at oprette dine egne planter og derefter bruge dem præcis som de prædefinerede.
 
 \subsection{Få styr på sædskifte}
 
