Wrote section about comparison

--- a/report/sammenligning.tex
+++ b/report/sammenligning.tex
@@ -1,1 +1,14 @@
 \section{Sammenligning}
+Vi har sammenlignet vores app med lignende apps og programmer som findes på markedet, for at se hvor vores app skiller sig ud.
+
+Vi har sammenlignet med andre apps til Android, som kan ses i bilag X. Her blev det ret tydeligt, at der har været mere fokus på det visuelle aspekt af de andre apps. Alle de testede apps havde et ikon til hver plante, og ofte også billeder tilhørende. Der er derudover også lagt vægt på animationer og grafer, som gør mange af tingene mere visuelle. Vi har et afsnit om vores fremtidige forbedringer i forhold til det visuelle i afsnit XXX.
+
+Et andet sted, hvor andre apps også gør det rigtig godt i forhold til vores app er mængden af data, som de har om hver plante. Her er det tydeligt, at det datagrundlag, som vi har valgt kunne have været bedre. De fleste informationer er ting som f.eks. hvilke planter der går godt sammen med andre og hvilke der ikke gør, hvor meget sollys planten skal have og deres resistens overfor frost. Valget vi tog om at tage udgangspunkt i et skema gjorde det nemt for os at skrive ned og læse ind, men det har haft en negativ betydning for mængden af informationer, som vores app har.
+
+Der hvor vores app skinner igennem er på nogle funktioner, som vi ikke kunne finde på de testede apps. Her var en funktion som at planlægge næste sæson og holde historik over sine planter, noget som vi har lagt meget vægt på at få implementeret. Vi gør det muligt for brugeren at se hvordan deres køkkenhave har set ud de tidligere år og giver dem endda mulighed for at planlægge langt ud i fremtiden, hvis de ønsker.
+
+Dette har også medført en implementation af oversigten over sædskife, som vi heller ikke kunne finde i de testede apps.
+
+Disse to funktioner har spillet en stor rolle i vores brugertests og er derfor blevet fokuseret meget på, i stedet for f.eks. ikoner til planterne.
+
+En sidste ting, som vi oplevede, da vi testede de andre apps, var at nogle af dem var forvirrende at navigere rundt i og forstå hvad man skal klikke på. Her kan vi se, at vores fokus på at lave tooltips har været rigtig godt, da det kan have stor betydning for ens brugeroplevelse, at man forstår hvad der sker, når man bruger appen. Mange af vores tooltips kunne gøres mere tydelige, men det er noget der ville kræve en større test-base end blot to personer og så selvfølgelig os selv.
